--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -98,9 +98,6 @@
                                                             <a href="/setup/di">Dependency Injection</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/best-practices">Best Practices</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -147,9 +144,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/push/firebase">Firebase Messaging</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/aws">AWS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/push/onesignal">OneSignal</a>
@@ -368,7 +362,93 @@
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <h2 id="features">Features</h2>
+                                    <div class="tab-wrap">
+<input type="radio" id="7034f95a30bb4b8cb224bf830c131777-bd9197e9602d449e81a7cf0c642af742" name="7034f95a30bb4b8cb224bf830c131777" class="tab" checked><label for="7034f95a30bb4b8cb224bf830c131777-bd9197e9602d449e81a7cf0c642af742" >General</label>
+<input type="radio" id="7034f95a30bb4b8cb224bf830c131777-8e54b877007145be948448f7775d7ff7" name="7034f95a30bb4b8cb224bf830c131777" class="tab" ><label for="7034f95a30bb4b8cb224bf830c131777-8e54b877007145be948448f7775d7ff7" >Startup</label>
+<input type="radio" id="7034f95a30bb4b8cb224bf830c131777-6d428dd96233437eb3b95320d2c2c20c" name="7034f95a30bb4b8cb224bf830c131777" class="tab" ><label for="7034f95a30bb4b8cb224bf830c131777-6d428dd96233437eb3b95320d2c2c20c" >Android</label>
+<input type="radio" id="7034f95a30bb4b8cb224bf830c131777-cb7b29c2e8424eb18141d7d9b4e5f48b" name="7034f95a30bb4b8cb224bf830c131777" class="tab" ><label for="7034f95a30bb4b8cb224bf830c131777-cb7b29c2e8424eb18141d7d9b4e5f48b" >iOS</label>
+<input type="radio" id="7034f95a30bb4b8cb224bf830c131777-acaaebdea0af4e3bb0db2488392afae7" name="7034f95a30bb4b8cb224bf830c131777" class="tab" ><label for="7034f95a30bb4b8cb224bf830c131777-acaaebdea0af4e3bb0db2488392afae7" >Windows</label>
+<div class="tab__content">
+<p>|Area|Info|
+|---|---|
+|Description||
+|Service|Shiny.Jobs.IJobManager
+|NuGet|<a href="https://www.nuget.org/packages/Shiny.Jobs/" target="Shiny.Jobs"><img src="https://img.shields.io/nuget/v/Shiny.Jobs.svg?style=for-the-badge&label=Shiny.Jobs" /></a>|
+|Static Generated Class|ShinyJobs</p>
+</div>
+<div class="tab__content">
+<pre><code class="language-csharp">using Microsoft.Extensions.DependencyInjection;
+using Shiny;
+
+namespace YourNamespace
+{
+    public class YourShinyStartup : ShinyStartup
+    {
+        public override void ConfigureServices(IServiceCollection services, IPlatform platform)
+        { 
+            
+&lt;p&gt;services.UseJobs 
+        }
+    }
+}
+</code></pre>
+</p>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 8.0</h2>
+</div>
+<div class="tab__content">
+<h2>Minimum Version: 10</h2>
+<h3>AppDelegate</h3>
+<pre><code class="language-csharp">using System;
+using Foundation;
+using Xamarin.Forms.Platform.iOS;
+using Shiny;
+<p>namespace YourIosApp
+{
+[Register(&quot;AppDelegate&quot;)]
+public partial class AppDelegate : FormsApplicationDelegate
+{
+public override bool FinishedLaunching(UIApplication app, NSDictionary options)
+{
+this.ShinyFinishedLaunching(new Samples.SampleStartup());
+global::Xamarin.Forms.Forms.Init();
+this.LoadApplication(new Samples.App());
+}
+public override void RegisteredForRemoteNotifications(UIApplication application, NSData deviceToken) =&gt; this.ShinyRegisteredForRemoteNotifications(deviceToken);
+public override void FailedToRegisterForRemoteNotifications(UIApplication application, NSError error) =&gt; this.ShinyFailedToRegisterForRemoteNotifications(error);
+public override void DidReceiveRemoteNotification(UIApplication application, NSDictionary userInfo, Action&lt;UIBackgroundFetchResult&gt; completionHandler) =&gt; this.ShinyDidReceiveRemoteNotification(userInfo, completionHandler);
+}
+}
+</code></pre></p>
+<h3>Info.plist</h3>
+<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
+&lt;!DOCTYPE plist PUBLIC &quot; -//Apple//DTD PLIST 1.0//EN&quot; &quot;http://www.apple.com/DTDs/PropertyList-1.0.dtd&quot;&gt;
+&lt;plist version=&quot;1.0&quot;&gt;
+&lt;dict&gt;
+    &lt;key&gt;UIBackgroundModes&lt;/key&gt;
+    &lt;array&gt;
+     &lt;string&gt;remote-notification&lt;/string&gt;
+    &lt;/array&gt;
+&lt;/dict&gt;
+&lt;/plist&gt;
+</code></pre>
+<h3>Entitlements.plist</h3>
+<pre><code class="language-xml">&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot; ?&gt;
+&lt;!DOCTYPE plist PUBLIC &quot; -//Apple//DTD PLIST 1.0//EN&quot; &quot;http://www.apple.com/DTDs/PropertyList-1.0.dtd&quot;&gt;
+&lt;plist version=&quot;1.0&quot;&gt;
+&lt;dict&gt;
+   &lt;key&gt;aps-environment&lt;/key&gt;
+   &lt;string&gt;development OR production&lt;/string&gt;
+&lt;/dict&gt;
+&lt;/plist&gt;
+</code></pre>
+</div>
+<div class="tab__content">
+<p>No Special Configuration Required</p>
+</div>
+</div>
+<h2 id="features">Features</h2>
 <ul>
 <li><p>Cross Platform Background Jobs Framework</p>
 </li>
