--- a/setup/startup.html
+++ b/setup/startup.html
@@ -98,9 +98,6 @@
                                                             <a href="/setup/di">Dependency Injection</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/setup/best-practices">Best Practices</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
                                                             <a href="/setup/integrations">Integrations</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
@@ -147,9 +144,6 @@
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/push/firebase">Firebase Messaging</a>
-                                                        </div>
-                                                        <div class="sidebar-nav-child">
-                                                            <a href="/push/aws">AWS</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/push/onesignal">OneSignal</a>
@@ -392,8 +386,45 @@ namespace Samples
 }
 
 </code></pre>
-<a href="https://www.nuget.org/packages/Shiny.Logging.AppCenter/" target="Shiny.Logging.AppCenter"><img src="https://img.shields.io/nuget/v/Shiny.Logging.AppCenter.svg?style=for-the-badge" /></a>
-<a href="https://www.nuget.org/packages/Shiny.Logging.Firebase/" target="Shiny.Logging.Firebase"><img src="https://img.shields.io/nuget/v/Shiny.Logging.Firebase.svg?style=for-the-badge" /></a>
+<h2 id="best-practices">Best Practices</h2>
+<ol>
+<li>Always use the <TheShinyService>.RequestAccess to check if your user gives the right permissions to use the service in question.</li>
+<li>Don't do UI centric things from a Shiny delegate, this includes things like calling RequestAccess.  Most Shiny services have an equivalent &quot;foreground&quot; type call on the service that can be used safely within the UI portion of your application.</li>
+<li>Don't try to setup background processes in a delegate or as your app is going to sleep.  The methods for setting up background processes in Shiny are all asyncc and the OS will not wait for things to complete.</li>
+<li>Treat everything as a singleton in Shiny</li>
+</ol>
+<h3 id="registering-platform-specific-services">Registering Platform Specific Services</h3>
+<p>You are also likely to want to occasionally register your own cross platform services.  Shiny offers a way of doing this via the startup.  NOTE: If you do this, you will have to remove the boilerplate source generation from the Shiny package</p>
+<h4 id="ios">iOS</h4>
+<pre><code class="language-csharp">public partial class AppDelegate : global::Xamarin.Forms.Platform.iOS.FormsApplicationDelegate 
+{
+    public override bool FinishedLaunching(UIApplication app, NSDictionary options) 
+    {
+        this.ShinyFinishedLaunching(new YourStartup 
+        {
+            RegisterPlatformServices = services =&gt; 
+            {
+                services.AddSingleton&lt;IYourService, YourService&gt;();
+            }
+        });
+    }
+}
+</code></pre>
+<h3 id="android">Android</h3>
+<pre><code class="language-csharp">public class AndroidApplication : Android.App.Application
+{
+    public override void OnCreate() 
+    {
+        base.OnCreate();
+        this.ShinyOnCreate(new YourStartup {
+            RegisterPlatformServices = services =&gt; 
+            {
+                services.AddSingleton&lt;IYourService, YourService&gt;();
+            }
+        })
+    }
+}
+</code></pre>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
